infra/kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasktracker-server
  namespace: tasktracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasktracker-server
  template:
    metadata:
      labels:
        app: tasktracker-server
    spec:
      imagePullSecrets:
        - name: ecr-regcred
      containers:
        - name: server
          image: 383349724158.dkr.ecr.us-east-1.amazonaws.com/tasktracker-dev-server:latest
          ports:
            - containerPort: 3000
