infra/kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasktracker-server
  namespace: tasktracker
spec:
  selector:
    app: tasktracker-server
  ports:
    - port: 3000
      targetPort: 3000
