infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasktracker-ingress
  namespace: tasktracker
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tasktracker-server
                port:
                  number: 3000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: tasktracker-server
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasktracker-client
                port:
                  number: 80
